objects/Personal_Goal_Relationship__c.object
<CustomObject>
    <description>Payee Relationships can be associated directly with Personal Goals. The Relationships themselves may persist beyond the Personal Goal.</description>
    <fields>
        <fullName>Counter_ID__c</fullName>
        <displayFormat>PGR{0}</displayFormat>
        <label>Counter ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Personal_Goal__c</fullName>
        <label>Personal Goal</label>
        <referenceTo>Personal_Goal__c</referenceTo>
        <relationshipName>Personal_Goal_Relationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship</label>
        <referenceTo>Staff_Relationship__c</referenceTo>
        <relationshipName>Personal_Goal_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Personal Goal Relationship</label>
    <nameField>
        <label>Personal Goal Relationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Personal Goal Relationships</pluralLabel>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>